added twitter link

--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,9 @@ author :
   name : Sameer Akhtar
   email : sameervitian2006@gmail.com
   github : sameervitian
-  twitter : 
+  twitter : sameerakhtar
   feedburner : 
   linkedin : sameerakhtar
-  facebook : sameervitian2006
-  googleplus: u/0/114666152374823203815
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
